...
  Widget _buildTitle() {
    final String titleHint = 'Title'.tr();
    //Disable IMEPL if keyboard incognito mode is true
    final bool enableIMEPLFlag = !PreferencesStorage.keyboardIncognito;

    return ShadInputFormField(
      key: const Key('ui-note-field-title'),
      controller: titleController,
      focusNode: titleFocusNode,
      autofocus: true,
      enableIMEPersonalizedLearning: enableIMEPLFlag,
      maxLines: null,
      textDirection: getTextDirection(titleController.text),
...
  Widget buildDescription(BuildContext context) {
    // maxLine is used in resizing description field on keyboard activation or dismissal
    final String hintDescription = 'Type something...'.tr();
    final bool enableIMEPLFlag = !PreferencesStorage.keyboardIncognito;

    return ShadInputFormField(
      key: const Key('ui-note-field-body'),
      controller: descriptionController,
      focusNode: descriptionFocusNode,
      inputFormatters: PreferencesStorage.isMarkdownToolbarEnabled
          ? const [MarkdownAutoIndentFormatter()]
          : const [],
      enableIMEPersonalizedLearning: enableIMEPLFlag,
...
